# AlethOS-ToolPassport

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Dockerfile  Makefile  README.md  design-qa.md  package-lock.json  package.json
backend/: AGENTS.md  Cargo.toml
backend/migrations/: 0001_create_runs_and_run_events.sql  0002_create_tools_and_aliases.sql  0003_add_tool_id_to_runs.sql  0004_create_artifacts_and_evidence.sql  0005_add_hash_chain_and_decision_events.sql  0006_create_check_results.sql  0007_create_frozen_evidence.sql  0008_create_passport_and_provenance.sql  0009_create_approvals.sql  0010_create_attestation_receipts.sql
backend/src/: lib.rs  main.rs
backend/src/api/: error.rs  mod.rs
backend/src/domain/: approval.rs  artifact.rs  attestation.rs  check_results.rs  evidence.rs  evidence_freeze.rs  mod.rs  passport.rs  run.rs  run_event.rs  tool.rs  tool_identity.rs
backend/src/repository/: mod.rs
backend/src/services/: attestation.rs  mod.rs  normalizer.rs  scoring.rs  storage.rs
backend/tests/: artifacts.rs  attestations.rs  check_results.rs  evidence_freeze.rs  health.rs  passport_freeze.rs  runs.rs  scoring.rs  tools.rs
contracts/: AGENTS.md  foundry.toml
dashboard/: AGENTS.md  package-lock.json  package.json  vitest.config.ts
docs/: project-overview.md  (+3 more)
orchestrator/: AGENTS.md  pyproject.toml
orchestrator/scripts/: live_audit.py  run_graph_demo.py
orchestrator/src/toolpassport_orchestrator/: __init__.py  backend_client.py  checkpoint.py  fixtures.py  graph.py  llm.py  nodes.py  research.py  state.py
orchestrator/tests/: test_checkpoint.py  test_eventing.py  test_graph.py  test_llm.py  test_research.py
(+102 files in other folders)
