[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "toolpassport-orchestrator"
version = "0.1.0"
description = "Long-running ToolPassport audit orchestration"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28,<1",
  "langgraph>=1.0,<2",
  "pydantic>=2.12,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18,<2",
  "pytest>=9,<10",
  "ruff>=0.14,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toolpassport_orchestrator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
